tests/rosetta/transpiler/Zig/algebraic-data-types.error
zig build: exit status 1
/tmp/algebraic-data-types.zig:88:8: error: function parameter shadows declaration of 'tr'
/tmp/algebraic-data-types.zig:12:1: note: declared here
/tmp/algebraic-data-types.zig:101:11: error: function parameter shadows declaration of 'tr'
/tmp/algebraic-data-types.zig:12:1: note: declared here
